# rust-hello

./: Cargo.toml
src/: main.rs
