[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "cargo"] }
tokio = { version = "1.40.0", features = ["full"] }

